syntax = "proto3";

package login;

message RoleInfo {
	optional int64 playerId = 1;
	optional string name = 2;
	optional string sessionkey = 3;
	optional string gameUrl = 4;
	optional int64 camp = 5;
	optional uint64 createDt = 6;
}

message Login {
	optional string username = 1;
	optional string token = 2;
	optional string clientPasswd = 3;
	optional string platform = 4 [default = "test"];
	optional uint32 osCode = 5;
	optional string deviceId = 6;
	optional string codeVersion = 7;
	optional int32 serverId = 8;
	optional string subPlatform = 9 [default = "test"];
	optional string userAgent = 10;
}

message LoginR {
	optional int64 err = 1 [default = 0];
	optional RoleInfo info = 2;
}